# manta

./: .gitignore  Makefile  README.md
.github/workflows/: ci-cd-pipeline.yml  ml-retrain.yml
apps/api-gateway/: Dockerfile  go.mod  go.sum
apps/coach/: README.md  requirements.txt
apps/data-collector/: Dockerfile  requirements.txt
apps/draft/: README.md  requirements.txt
apps/feature-extractor/: Dockerfile  README.md  requirements.txt
apps/feature-store/: README.md  requirements.txt
apps/frontend/: Dockerfile  README.md  index.html  nginx.conf  package.json  (+3 more)
apps/replay-parser/: CMakeLists.txt  Dockerfile  README.md
apps/replay-parser/include/: bit_reader.hpp  combat_log.hpp  demo_reader.hpp  entities.hpp  field_decoder.hpp  fieldpath.hpp  packet_demux.hpp  pb_lite.hpp  string_tables.hpp
apps/replay-parser/src/: combat_log.cpp  demo_reader.cpp  demoinfo_main.cpp  entities.cpp  field_decoder.cpp  fieldpath.cpp  packet_demux.cpp  string_tables.cpp
apps/replay-parser/svc/: go.mod  go.sum
apps/replay-parser/svc/cmd/parser-svc/: main.go
apps/replay-parser/svc/internal/config/: config.go
apps/replay-parser/svc/internal/consumer/: consumer.go  metrics.go
apps/replay-parser/svc/internal/pipeline/: clickhouse.go  pipeline.go  pipeline_test.go
apps/replay-parser/tests/: test_core.cpp
deployments/: .env.example  docker-compose.yml
docs/: HANDOFF.md  REVIEW.md  ROADMAP.md  runbooks.md
openapi/: dota-ai-analyst.yaml  manta.yaml
proto/: services.proto
scripts/: ch-migrate.sh  dashboard.py  dataset-sync.sh  dev-recover.sh  doctor.sh  pg-migrate.sh
(+177 files in other folders)
